add log feature

--- a/src/04.Presentation/MaktabGram.Presentation.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/04.Presentation/MaktabGram.Presentation.RazorPages/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MaktabGram.Domain.Core.UserAgg.Contracts
+@using MaktabGram.Domain.Core.UserAgg.Contracts.User
 @using MaktabGram.Presentation.RazorPages.Extentions
 @{
     @inject IUserApplicationService userApplicationService;
