--- a/src/04.Presentation/MaktabGram.Presentation.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/04.Presentation/MaktabGram.Presentation.RazorPages/Pages/Shared/_Layout.cshtml
@@ -128,10 +128,10 @@
                     <a asp-page="/Account/Profile" asp-route-userId="@cookieService.GetUserId()" title="پروفایل">
                         <div class="w-8 h-8 rounded-full overflow-hidden border-2 border-gray-600">
 
-                            <a asp-page="/Account/Profile" asp-route-userId="@cookieService.GetUserId()">
+                           @*  <a asp-page="/Account/Profile" asp-route-userId="@cookieService.GetUserId()">
                                 <img src="/@userApplicationService.GetImageProfileUrl(cookieService.GetUserId(),default)"
                                      alt="پروفایل" class="w-full h-full object-cover">
-                            </a>
+                            </a> *@
                         </div>
                     </a>
                 }
